--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug -PITAD_CLIENT_ID=$ITAD_CLIENT_ID -PITAD_API_KEY=$ITAD_API_KEY -PITAD_CLIENT_SECRET=$ITAD_CLIENT_SECRET
     - name: Run detekt
       run: ./gradlew detekt
     - name: Run unit tests
