--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,10 +22,28 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Create gradle.properties file
+      run: |
+        GRADLE_HOME=$HOME"/.gradle"
+        GRADLE_PROPERTIES=$GRADLE_HOME"/gradle.properties"
+        export GRADLE_HOME
+        export GRADLE_PROPERTIES
+        echo "Gradle Properties should exist at $GRADLE_PROPERTIES"
+
+        if [[ ! -f "$GRADLE_PROPERTIES" ]]; then
+            echo "Gradle Properties does not exist"
+
+            echo "Creating Gradle Properties file..."
+            mkdir -p $GRADLE_HOME && touch $GRADLE_PROPERTIES
+
+            echo "Writing ITAD_KEYS to gradle.properties..."
+            echo "ITAD_CLIENT_ID=$ITAD_CLIENT_ID" >> $GRADLE_PROPERTIES
+            echo "ITAD_CLIENT_SECRET=$ITAD_CLIENT_SECRET" >> $GRADLE_PROPERTIES
+            echo "ITAD_API_KEY=$ITAD_API_KEY" >> $GRADLE_PROPERTIES
+        fi
     - name: Build with Gradle
-      run: ./gradlew assembleDebug -PITAD_CLIENT_ID=$ITAD_CLIENT_ID -PITAD_API_KEY=$ITAD_API_KEY -PITAD_CLIENT_SECRET=$ITAD_CLIENT_SECRET
+      run: ./gradlew assembleDebug
     - name: Run detekt
       run: ./gradlew detekt
     - name: Run unit tests
       run: ./gradlew testDebug --stacktrace
-      
