--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ org.gradle.jvmargs=-Xmx2560m
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.configureondemand=true
 org.gradle.console=rich
 org.gradle.parallel=true
