--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,10 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion AndroidSdk.compile
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
     defaultConfig {
         minSdkVersion AndroidSdk.min
