--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.4.10'
+    ext.kotlin_version = '1.5.21'
 
     repositories {
         google()
@@ -17,7 +17,7 @@ buildscript {
 }
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.21.0"
+    id "com.github.ben-manes.versions" version "0.39.0"
     id "io.gitlab.arturbosch.detekt" version "1.14.0"
 }
 
@@ -30,7 +30,7 @@ allprojects {
     }
 }
 
-subprojects {
+subprojects { project ->
     apply plugin: 'io.gitlab.arturbosch.detekt'
 
     detekt {
@@ -50,6 +50,10 @@ subprojects {
 
     dependencies {
         detektPlugins BuildPlugins.detektFormatting
+    }
+
+    if (project.pluginManager.hasPlugin("com.android.library")) {
+        throw IllegalAccessError("Fuck")
     }
 }
 
