--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-parcelize'
 apply from: "../../gradle/scripts/android-test.gradle"
 
 android {
