--- a/features/watchlist/build.gradle
+++ b/features/watchlist/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -26,10 +26,6 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
-    }
-
-    viewBinding {
-        enabled true
     }
 
     testOptions {
