--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity
                 android:name=".common.acra.ErrorActivity"
+                android:exported="false"
                 android:label="@string/title_submit_error_report"/>
 
         <provider
