--- a/auth/src/main/AndroidManifest.xml
+++ b/auth/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
         <activity
                 android:name="net.openid.appauth.RedirectUriReceiverActivity"
+                android:exported="true"
                 tools:node="replace">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
