--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+import io.gitlab.arturbosch.detekt.Detekt
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.21'
+    ext.kotlin_version = '1.6.21'
 
     repositories {
         google()
@@ -18,7 +20,7 @@ buildscript {
 
 plugins {
     id "com.github.ben-manes.versions" version "0.39.0"
-    id "io.gitlab.arturbosch.detekt" version "1.14.0"
+    id "io.gitlab.arturbosch.detekt" version "1.20.0"
 }
 
 allprojects {
@@ -34,30 +36,26 @@ subprojects { project ->
     apply plugin: 'io.gitlab.arturbosch.detekt'
 
     detekt {
-        input = files("src/main/java")
+        source = files("src/main/java")
         autoCorrect = true
-        reports {
-            html {
-                enabled = true
-                destination = file("$projectDir/build/reports/detekt.html")
-            }
-            xml {
-                enabled = false
-            }
-        }
         config = files("${rootProject.projectDir}/config/detekt/detekt.yml")
     }
 
     dependencies {
         detektPlugins BuildPlugins.detektFormatting
     }
-
-    if (project.pluginManager.hasPlugin("com.android.library")) {
-        throw IllegalAccessError("Fuck")
-    }
 }
 
-tasks.withType(io.gitlab.arturbosch.detekt.Detekt) {
+tasks.withType(Detekt).configureEach {
+    reports {
+        html {
+            enabled = true
+            destination = file("$projectDir/build/reports/detekt.html")
+        }
+        xml {
+            enabled = false
+        }
+    }
     autoCorrect = true
 }
 
