--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="de.r4md4c.gamedealz.core" />
+<manifest package="de.r4md4c.gamedealz.core" />
