--- a/features/search/src/main/AndroidManifest.xml
+++ b/features/search/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="de.r4md4c.gamedealz.feature.search" />
+<manifest package="de.r4md4c.gamedealz.feature.search" />
