--- a/data/build.gradle
+++ b/data/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
     implementation Libraries.roomRuntime
     kapt Libraries.roomCompiler
-    implementation Libraries.lifecycleLiveData
+    implementation Libraries.lifecycleLiveDataKtx
     implementation Libraries.sqliteKtx
     implementation (Libraries.roomKtx) {
         exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
