--- a/features/detail/build.gradle
+++ b/features/detail/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     }
     implementation Libraries.kotlinStdLib
     implementation Libraries.lifecycleViewModel
-    implementation Libraries.lifecycleLiveData
+    implementation Libraries.lifecycleLiveDataKtx
     implementation Libraries.lifecycleViewModelKtx
     implementation Libraries.lifecycleRuntimeKtx
     implementation Libraries.lifecycleJava8Common
