--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ org.gradle.console=rich
 org.gradle.parallel=true
 org.gradle.caching=true
 kapt.incremental.apt=true
+android.nonTransitiveRClass=false
