--- a/network/build.gradle
+++ b/network/build.gradle
@@ -23,6 +23,10 @@ android {
 
     }
 
+    buildFeatures {
+        buildConfig true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
