--- a/auth/src/main/AndroidManifest.xml
+++ b/auth/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="de.r4md4c.gamedealz.auth">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <application>
         <activity
