--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,6 @@
-apply plugin: 'java-library'
-apply plugin: 'kotlin'
+plugins {
+    id "org.jetbrains.kotlin.jvm"
+}
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -13,6 +14,3 @@ dependencies {
     testImplementation TestLibraries.coroutinesTest
     testImplementation project(':commontest')
 }
-
-sourceCompatibility = "8"
-targetCompatibility = "8"
