--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,35 @@
-#version: 3
-#jobs:
-#  build:
-#    working_directory: ~/code
-#    docker:
-#      - image: cimg/android:2022.04.1
-#    environment:
-#      CI: true
-#      JVM_OPTS: -Xmx3200m
-#      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2 -Dkotlin.incremental=false"
-#    steps:
-#      - checkout
-#      - run:
-#          name: Prepare gradle.properties
-#          command: source environmentSetup.sh && copyEnvVarsToGradleProperties
-#      - restore_cache:
-#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-#      - run:
-#          name: Download Dependencies
-#          command: ./gradlew androidDependencies
-#      - save_cache:
-#          paths:
-#            - ~/.gradle
-#          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-#      - run:
-#          name: Run Static Code Analysis
-#          command: ./gradlew detekt
-#      - run:
-#          name: Run Tests
-#          command: ./gradlew lintDebug testDebug --stacktrace
-#      - store_artifacts:
-#          path: app/build/reports
-#          destination: reports
-#      - store_test_results:
-#          path: app/build/test-results
+version: 3
+jobs:
+  build:
+    working_directory: ~/code
+    docker:
+      - image: cimg/android:2022.04.1
+    environment:
+      CI: true
+      JVM_OPTS: -Xmx3200m
+      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2 -Dkotlin.incremental=false"
+    steps:
+      - checkout
+      - run:
+          name: Prepare gradle.properties
+          command: source environmentSetup.sh && copyEnvVarsToGradleProperties
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Static Code Analysis
+          command: ./gradlew detekt
+      - run:
+          name: Run Tests
+          command: ./gradlew lintDebug testDebug --stacktrace
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
