--- a/features/deals/build.gradle
+++ b/features/deals/build.gradle
@@ -15,15 +15,14 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 
     kotlinOptions {
         jvmTarget = "1.8"
     }
 
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
