--- a/features/watchlist/build.gradle
+++ b/features/watchlist/build.gradle
@@ -19,9 +19,8 @@ android {
         testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    buildFeatures {
+        buildConfig true
     }
 
     kotlinOptions {
