--- a/common-ui/build.gradle
+++ b/common-ui/build.gradle
@@ -17,10 +17,9 @@ android {
     }
 
     testOptions.unitTests.includeAndroidResources = true
-    
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+
+    buildFeatures {
+        buildConfig true
     }
 
     kotlinOptions {
