--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,9 @@ jobs:
       - run:
           name: Assemble Release
           command: ./gradlew assembleRelease
+      - store_artifacts:
+          path: app/build/outputs/apk/release
+
 
 # Orchestrate our job run sequence
 workflows:
