Fix release build crash

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,3 +61,7 @@ workflows:
     jobs:
       - build
       - generate-apk
+#          filters:
+#            branches:
+#              only:
+#                - main
